### 0.0.2 * (owagner) support node-eiscp's Autodiscovery mechanism * (owagner) updated README, notably removing bogus reference to singly threading

--- a/admin/index.html
+++ b/admin/index.html
@@ -34,7 +34,7 @@
     <p>&nbsp;</p>
     <table>
         <tr>
-            <td>Onkyo AVR Address</td>
+            <td>Onkyo AVR Address<br/>(leave empty for Autodiscovery)</td>
             <td><input type="text" id="avrAddress" class="value"></td>
         </tr>
         <tr>
