--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -1,13 +1,18 @@
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../../lib/css/themes/jquery-ui/redmond/jquery-ui.min.css"/>
-    <script type="text/javascript" src="../../lib/js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="../../socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="../../lib/js/jquery-ui-1.10.3.full.min.js"></script>
+    <meta charset="UTF-8">
+    <!-- Materialze style -->
     <link rel="stylesheet" type="text/css" href="../../css/adapter.css"/>
+    <link rel="stylesheet" type="text/css" href="../../lib/css/materialize.css">
+
+    <script type="text/javascript" src="../../lib/js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../../socket.io/socket.io.js"></script>
+
     <script type="text/javascript" src="../../js/translate.js"></script>
+    <script type="text/javascript" src="../../lib/js/materialize.js"></script>
     <script type="text/javascript" src="../../js/adapter-settings.js"></script>
     <script type="text/javascript" src="words.js"></script>
+
     <script type="text/javascript">
 
         function load(settings, onChange) {
@@ -19,11 +24,12 @@
                 });
             });
             for (var key in settings) {
+                if (!settings.hasOwnProperty(key)) continue;
                 var $value = $('#' + key + '.value');
                 if ($value.attr('type') === 'checkbox') {
                     $value.prop('checked', settings[key]);
                 } else {
-                    $$value.val(settings[key]);
+                    $value.val(settings[key]);
                 }
             }
             onChange(false);
@@ -45,25 +51,28 @@
     </script>
 </head>
 <body>
-<div id="adapter-container">
-    <table>
-        <tr>
-            <td><img src="onkyo.png"></td>
-            <td><h3 class="translate">ONKYO adapter settings</h3></td>
-        </tr>
-    </table>
-    <p>&nbsp;</p>
-    <table>
-        <tr>
-            <td><label class="translate" for="avrAddress">Onkyo AVR Address</label></td>
-            <td><input type="text" id="avrAddress" class="value"></td>
-            <td class="translate">(leave empty for Autodiscovery)</td>
-        </tr>
-        <tr>
-            <td><label class="translate" for="avrPort">AVR EISCP Port</label></td>
-            <td><input type="number" id="avrPort" class="value"></td>
-        </tr>
-    </table>
+<!-- you have to put your config page in a div with id adapter-container -->
+<div class="m adapter-container">
+    <div class="row">
+        <div class="row">
+            <div class="col s12 m4 l2">
+                <img src="onkyo.png" class="logo">
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s10 m4">
+                <input type="text" id="avrAddress" class="value">
+                <label class="translate" for="avrAddress">Onkyo AVR Address</label>
+                <span class="translate">(leave empty for Autodiscovery)</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="nput-field col s2 m2">
+                <input type="number" id="avrPort" class="value">
+                <label class="translate" for="avrPort">AVR EISCP Port</label>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
