--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -1,78 +1,111 @@
 <html>
 <head>
-    <meta charset="UTF-8">
-    <!-- Materialze style -->
-    <link rel="stylesheet" type="text/css" href="../../css/adapter.css"/>
-    <link rel="stylesheet" type="text/css" href="../../lib/css/materialize.css">
+<!-- these 4 files always have to be included -->
+<link rel="stylesheet" type="text/css" href="../../lib/css/materialize.css">
+<link rel="stylesheet" type="text/css" href="../../css/adapter.css"/>
 
-    <script type="text/javascript" src="../../lib/js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="../../socket.io/socket.io.js"></script>
+<script type="text/javascript" src="../../lib/js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="../../socket.io/socket.io.js"></script>
 
-    <script type="text/javascript" src="../../js/translate.js"></script>
-    <script type="text/javascript" src="../../lib/js/materialize.js"></script>
-    <script type="text/javascript" src="../../js/adapter-settings.js"></script>
-    <script type="text/javascript" src="words.js"></script>
+<!-- these files always have to be included -->
+<script type="text/javascript" src="../../js/translate.js"></script>
+<script type="text/javascript" src="../../lib/js/materialize.js"></script>
+<script type="text/javascript" src="../../js/adapter-settings.js"></script>
+<script type="text/javascript" src="words.js"></script>
+ <style>
+  .m .col .select-wrapper+label {
+   top: -26px;  
+  }
+     .m span{
+         font-size: 0.9em;
+     }
+ </style>
+<!-- you have to define 2 functions in the global scope: -->
+<script type="text/javascript">
 
-    <script type="text/javascript">
-
-        function load(settings, onChange) {
-            $('.value').each(function () {
-                $(this).on('change', function () {
-                    onChange();
-                }).on('keyup', function () {
+    // the function loadSettings has to exist ...
+    function load(settings, onChange) {
+        // example: select elements with id=key and class=value and insert value
+       if (!settings) return;
+        $('.value').each(function () {            
+            var $key = $(this);
+            var id = $key.attr('id');
+            if ($key.attr('type') === 'checkbox') {
+		        // do not call onChange direct, because onChange could expect some arguments
+                $key.prop('checked', settings[id]).change(function() {
                     onChange();
                 });
-            });
-            for (var key in settings) {
-                if (!settings.hasOwnProperty(key)) continue;
-                var $value = $('#' + key + '.value');
-                if ($value.attr('type') === 'checkbox') {
-                    $value.prop('checked', settings[key]);
-                } else {
-                    $value.val(settings[key]);
-                }
+            } else {
+		        // do not call onChange direct, because onChange could expect some arguments
+                $key.val(settings[id]).change(function() {
+                    onChange();
+                }).keyup(function() {
+                    onChange();
+                });
             }
-            onChange(false);
-        }
+        });
+        onChange(false);
+        M.updateTextFields();  // function Materialize.updateTextFields(); to reinitialize all the Materialize labels on the page if you are dynamically adding inputs.
+    }
 
-        function save(callback) {
-            var obj = {};
-            $('.value').each(function () {
-                var $this = $(this);
-                if ($this.attr('type') === 'checkbox') {
-                    obj[$this.attr('id')] = $this.prop('checked');
-                } else {
-                    obj[$this.attr('id')] = $this.val();
-                }
-            });
-
-            callback(obj);
-        }
-    </script>
+    // ... and the function save has to exist.
+    // you have to make sure the callback is called with the settings object as first param!
+    function save(callback) {
+        // example: select elements with class=value and build settings object
+        var obj = {};
+        $('.value').each(function () {
+            var $this = $(this);
+            if ($this.attr('type') === 'checkbox') {
+                obj[$this.attr('id')] = $this.prop('checked');
+            } else {
+                obj[$this.attr('id')] = $this.val();
+            }
+        });
+        callback(obj);
+    }
+</script>
 </head>
 <body>
-<!-- you have to put your config page in a div with id adapter-container -->
-<div class="m adapter-container">
-    <div class="row">
+    <!-- you have to put your config page in a div with id adapter-container -->
+    <div class="m adapter-container">
         <div class="row">
-            <div class="col s12 m4 l2">
-                <img src="onkyo.png" class="logo">
+            <!-- Forms are the standard way to receive user inputted data.
+         Learn more http://materializecss.com/forms.html-->
+            <div class="row">
+                <div class="input-field col s6">
+                    <img src="onkyo.png" class="logo">
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="input-field col s10 m4">
-                <input type="text" id="avrAddress" class="value">
-                <label class="translate" for="avrAddress">Onkyo AVR Address</label>
-                <span class="translate">(leave empty for Autodiscovery)</span>
+            <div class="row">
+                <div class="input-field col s12 m6 l4">
+                    <input type="text" class="value" id="avrAddress" />
+                    <label for="Onkyo AVR Address" class="translate">Fill in the hostname or ip-address</label>
+                    <!-- Important: label must come directly after input. Label is important. -->
+                    <span class="translate">leave it empty for autodiscovery</span>
+                </div>
+                <div class="input-field col s12 m6 l4">
+                    <input type="number" class="value" id="avrPort" />
+                    <label for="Polling time" class="translate">Fill in the port of AVR</label>
+                    <!-- Important: label must come directly after input. Label is important. -->
+                </div>
+				<div class="input-field col s12 m6 l4">
+                    <input value="40" type="number" class="value" id="maxvolzone1" />
+                    <label for="Polling time" class="translate">Max Volume Zone1</label>
+                    <!-- Important: label must come directly after input. Label is important. -->
+                </div>
+				<div class="input-field col s12 m6 l4">
+                    <input value="40" type="number" class="value" id="maxvolzone2" />
+                    <label for="Polling time" class="translate">Max Volume Zone2</label>
+                    <!-- Important: label must come directly after input. Label is important. -->
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="nput-field col s2 m2">
-                <input type="number" id="avrPort" class="value">
-                <label class="translate" for="avrPort">AVR EISCP Port</label>
+            <div class="row">
+                <div class="col s12">
+                    <p class="translate">on save adapter restarts with new config immediately</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </body>
+
 </html>
