* (Apollon77) Add reconnection and device offline detection * (Apollon77) optimize for js-controller 3.3 * update github actions, update testing * prepare weblate

--- a/admin/index.html
+++ b/admin/index.html
@@ -6,38 +6,8 @@
 <link rel="stylesheet" type="text/css" href="../../css/adapter.css"/>
 <script type="text/javascript" src="../../js/translate.js"></script>
 <script type="text/javascript" src="../../js/adapter-settings.js"></script>
+<script type="text/javascript" src="words.js"></script>
 <script type="text/javascript">
-    systemDictionary = {
-        "ONKYO adapter settings": {
-            "de": "ONKYO Einstellungen",
-            "ru": "ONKYO Настройки"
-        },
-        "Onkyo AVR Address": {
-            "de": "Onkyo AVR Adresse",
-            "ru": "Onkyo AVR Адрес"
-        },
-        "(leave empty for Autodiscovery)": {
-            "de": "(lass es leer für Autodiscovery)",
-            "ru": "(оставить пустым для автопоиска)"
-        },
-                "Max Volume Zone1": {
-            "de": "Maximale Lautst&auml;rke Zone1",
-            "en": "Max volume of zone1"
-        },
-                "Max Volume Zone2": {
-            "de": "Maximale Lautst&auml;rke Zone2",
-            "en": "Max volume of zone2"
-        },
-        "(select for VIS compatibility)": {
-            "de": "(F&uuml;r VIS Kompatibilität anhaken!)",
-            "en": "Check this for VIS compatibility"
-        },
-        "AVR EISCP Port": {
-            "de": "AVR EISCP Port",
-            "ru": "AVR EISCP порт"
-        }
-    };
-
     function load(settings, onChange) {
         $('.value').each(function () {
             $(this).change(function () {
