* make intervals for discovery and alive checks configurable

--- a/admin/index.html
+++ b/admin/index.html
@@ -60,6 +60,14 @@
             <td class="translate">Max Volume Zone2</td>
             <td><input value="40" type="text" id="maxvolzone2" class="value"></td>
         </tr>
+        <tr>
+            <td class="translate">Device discovery interval (ms)</td>
+            <td><input value="30000" type="number" id="discoveryInterval" class="value"></td>
+        </tr>
+        <tr>
+            <td class="translate">Device alive check interval (ms)</td>
+            <td><input value="15000" type="text" id="aliveCheckInterval" class="value"></td>
+        </tr>
     </table>
 </div>
 </html>
