--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -104,6 +104,18 @@
             </div>
         </div>
         <div class="row">
+            <div class="input-field col s12 m6 l4">
+                <input value="30000" type="number" class="value" id="discoveryInterval"/>
+                <label for="discoveryInterval" class="translate">Device discovery interval (ms)</label>
+                <!-- Important: label must come directly after input. Label is important. -->
+            </div>
+            <div class="input-field col s12 m6 l4">
+                <input value="15000" type="number" class="value" id="aliveCheckInterval"/>
+                <label for="aliveCheckInterval" class="translate">Device alive check interval (ms)</label>
+                <!-- Important: label must come directly after input. Label is important. -->
+            </div>
+        </div>
+        <div class="row">
             <div class="col s12">
                 <p class="translate">on save adapter restarts with new config immediately</p>
             </div>
